--- a/html/index.html
+++ b/html/index.html
@@ -14,29 +14,29 @@
   </head>
   <body>
     <!--==== MAIN CONTAINER====-->
-    <div class="main-container">
+    <div class="main-container" >
       <div class="aside">
         <div class="logo">
-          <a href="#"> <span>H</span>osaya </a>
+          <a href="#home"> <span>H</span>osaya </a>
         </div>
         <div class="nav-toggler">
           <span></span>
         </div>
         <ul class="nav">
           <li>
-            <a href="#" class="active"><i class="fa fa-home"></i>Inicio</a>
+            <a href="#home" class="active"><i class="fa fa-home"></i>Inicio</a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-user"></i>Sobre mi</a>
+            <a href="#about"><i class="fa fa-user"></i>Sobre mi</a>
           </li>
           <li>
-            <a href="#"><i class="fa fa-comments"></i>Contacto</a>
+            <a href="#contact"><i class="fa fa-comments"></i>Contacto</a>
           </li>
         </ul>
       </div>
     </div>
     <div class="main-content">
-      <section class="home section">
+      <section class="home active section" id="home">
         <div class="container">
           <div class="row">
             <div class="home-info padd-15">
@@ -57,7 +57,7 @@
         </div>
       </section>
       <!--====ABOUT SECTION====-->
-      <section class="about section">
+      <section class="about section" id="about">
         <div class="container">
           <div class="row">
             <div class="section-title padd-15">
@@ -70,10 +70,7 @@
                 <div class="about-text padd-15">
                   <h3>Soy Hosaya Vargas <span>Desarrolladora web</span></h3>
                   <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                    Voluptatum vel ipsa harum exercitationem, incidunt ex soluta
-                    deserunt consequuntur, consequatur dolorum odio vitae quae
-                    hic ullam quidem, a quas laborum voluptas.
+                   Me gusta el chocolate
                   </p>
                 </div>
               </div>
@@ -81,7 +78,7 @@
                 <div class="personal-info padd-15">
                   <div class="row">
                     <div class="info-item padd-15">
-                      <p>Cumpleaños: <span>21 oct 1998</span></p>
+                      <p>Fecha nacimiento: <span>21 oct 1998</span></p>
                     </div>
                     <div class="info-item padd-15">
                       <p>Edad: <span>24 años</span></p>
@@ -96,7 +93,7 @@
                   <div class="row">
                     <div class="buttons padd-15">
                       <a href="#" class="btn"> CV</a>
-                      <a href="contact " class="btn hire-me">Contactame</a>
+                      <a href="#contact " class="btn hire-me">Contactame</a>
                     </div>
                   </div>
                 </div>
@@ -189,7 +186,7 @@
 
       <!--====FIN ABOUT SECTION====-->
       <!--====CONTACTO SECTION====-->
-      <section class="contact section">
+      <section class="contact section" id="contact">
         <div class="container">
           <div class="row">
             <div class="section-title padd-15">
