--- a/html/index.html
+++ b/html/index.html
@@ -10,12 +10,13 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
     <link rel="stylesheet" href="/css/style-switcher.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Hosaya Vargas</title>
   </head>
   <body>
     <!--==== MAIN CONTAINER====-->
-    <div class="main-container" >
-      <div class="aside">
+    <div class="main-container ">
+      <div class="aside  ">
         <div class="logo">
           <a href="#home"> <span>H</span>osaya </a>
         </div>
@@ -48,6 +49,25 @@
                 Me especializo en el área de frotend, javascript, librerias como
                 react.js
               </p>
+              <img
+                class="home-img-logos padd-15"
+                src="/img/javascript-logo.png"
+              />
+              <img
+                class="home-img-logos padd-15"
+                src="/img/css-logo.png"
+              />
+              <img
+              class="home-img-logos padd-15"
+              src="/img/html-logo.png"
+            />
+            <img
+            class="home-img-logos padd-15"
+            src="/img/react-logo.png"
+          />
+
+            <br />
+
               <a href="#contact" class="btn hire-me">Contactame</a>
             </div>
             <div class="home-img padd-15">
@@ -69,9 +89,7 @@
               <div class="row">
                 <div class="about-text padd-15">
                   <h3>Soy Hosaya Vargas <span>Desarrolladora web</span></h3>
-                  <p>
-                   Me gusta el chocolate
-                  </p>
+                  <p>Me gusta el chocolate</p>
                 </div>
               </div>
               <div class="row">
@@ -209,7 +227,7 @@
             </div>
 
             <div class="contact-info-item padd-15">
-              <div class="icon"><i class="fa fa-envelope"></i></div>
+              <div class="icon"><i class="fa fa-instagram"></i></div>
               <h4>Instagram</h4>
               <p>papapayavs</p>
             </div>
